k8smastery-yaml/sa-frontend-pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: sa-frontend2
  labels:
    app: sa-frontend
spec:
  containers:
    - image: yipengh/sa-frontend
      name: sa-frontend
      ports:
        - containerPort: 80
