k8smastery-yaml/sa-logic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-logic
  labels:
    app: sa-logic
spec:
  selector:
    matchLabels:
      app: sa-logic
  replicas: 2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      name: sa-logic
      labels:
        app: sa-logic
    spec:
      containers:
        - image: yipengh/sa-logic:latest
          imagePullPolicy: Always
          name: sa-logic
          ports:
            - containerPort: 5000
