k8smastery-yaml/sa-frontend-service-np.yml
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend-np
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
  selector:
    app: sa-frontend
