k8smastery-yaml/sa-logic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sa-logic
spec:
  type: NodePort
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      nodePort: 30005
  selector:
    app: sa-logic
