k8smastery-yaml/sa-webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sa-webapp
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30008
  selector:
    app: sa-webapp
